# pcl-project

./: README.md
examples/io/concatenate/: concatenate_clouds.cpp
filter/passthrough/: passthrough.cpp
filter/radiusoutlierRemoval/: CMakeLists.txt  radiusoutlier_removal.cpp
filter/statisticalOutlierRemoval/: README.md  statistical_removal.cpp
io/read/read_pcd/: pcd_read.cpp  pcd_read1.cpp
segmentation/plane_model/: CMakeLists.txt  README.md  main.cpp  planar_segmentation.cpp  plane_normal_segmentation.cpp  sample_consensus.cpp
segmentation/plane_model/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  pcd_read
segmentation/region_growing/: region_growing_segmentation.cpp
surface/: .resampling.cpp.swp
surface/convex_hull/: CMakeLists.txt  README.md  main.cpp  planar_segmentation.cpp
surface/fitting_mesh/: main.cpp
surface/sac_line/: planar_segmentation.cpp
